<resources>
    <string name="app_name">Recipe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="share">Share</string>
    <string name="share_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="make">Make</string>
    <string name="make_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="explore">Explore</string>
    <string name="explore_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="close">CLOSE</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="sign_in_with_twitter">Sign In with Twitter</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_here_sign_up">New here? Sign Up</string>
    <string name="home">Home</string>
    <string name="my_recipe">My Recipe</string>
    <string name="setting">Settings</string>
    <string name="extra_1">Extra One</string>
    <string name="extra_2">Extra Two</string>
    <string name="extra_3">Extra Three</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="default_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="password_error">Password must be more than 6 charaters</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>

</resources>
